package hu.simplexion.z2.kotlin.ir.rui.air

interface AirExternalPatch : AirFunction